--- a/ArchivesFileManagement_MVC/Views/SpecialCollections/Index.cshtml
+++ b/ArchivesFileManagement_MVC/Views/SpecialCollections/Index.cshtml
@@ -15,7 +15,7 @@
             </button>
         </div>
     </div>
-    <form class="form-group" onsubmit="return validateSelection()">
+    <form id="searchForm" class="form-group" onsubmit="return validateSelection()">
         <div class="card-body">
             <div class="row justify-content-center">
                 <div class="col-md-auto">
@@ -44,6 +44,9 @@
             </div>
             <div class="col-md-auto">
                 <button class="btn btn-primary btn-sm" type="submit">Apply</button>
+            </div>
+            <div class="col-sm-auto">
+                <a href="/SpecialCollections">clear all</a>
             </div>
         </div>
     </form>
