--- a/ArchivesFileManagement_MVC/Views/Hccc/_Create.cshtml
+++ b/ArchivesFileManagement_MVC/Views/Hccc/_Create.cshtml
@@ -3,14 +3,62 @@
 @{
     Layout = null;
 }
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+<div class="modal-content">
+    <div class="modal-header">
+        <h4 class="modal-title">NEW S.H.R.A.B. DOC</h4>
+        <button type="button" class="close" data-dismiss="modal">X</button>
+    </div>
+    <div class="modal-body">
+        <form enctype="multipart/form-data" id="createForm" asp-action="Create" method="post" >
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row">
+                <div class="col form-group">
+                    <label asp-for="Type" class="control-label"></label>
+                    <select asp-for="Type" class="form-control" asp-items="ViewBag.TypeOptions" required></select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Location" class="control-label"></label>
+                <input asp-for="Location" class="form-control" required/>
+                <span asp-validation-for="Location" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DestructionDate" class="control-label"></label>
+                <input asp-for="DestructionDate" class="form-control" required/>
+                <span asp-validation-for="DestructionDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CaseNo" class="control-label"></label>
+                <input asp-for="CaseNo" class="form-control" required/>
+                <span asp-validation-for="CaseNo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SessionNo" class="control-label"></label>
+                <input asp-for="SessionNo" class="form-control" required/>
+                <span asp-validation-for="SessionNo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" required/>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                @*<label asp-for="Attachment" class="control-label"></label>*@
+                <input type="file" asp-for="Attachment" required/>
+                <span asp-validation-for="Attachment" class="text-danger"></span>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary btn-lg" @*data-dismiss="modal" onsubmit="SubmitForm(event)"*@ >Upload</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 <script>
-    function ValidateFields() {
-        //no more than 25Mb for files
-        //all fields must be filled out
-    }
-
     function SubmitForm() {
+        //e.preventDefault();
         var formData = new FormData($("#createForm").get(0));
         $.ajax({
             type: "POST",
@@ -18,7 +66,7 @@
             data: formData,
             contentType: false,
             processData: false,
-            dataType: "json",
+            dataType: "text",
             success: function () {
                 alert("New case uploaded successfully.");
                 $("#addModalContent").html("");
@@ -30,59 +78,3 @@
         });
     }
 </script>
-
-
-<div class="modal-content">
-    <div class="modal-header">
-        <h4 class="modal-title">NEW S.H.R.A.B. DOC</h4>
-        <button type="button" class="close" data-dismiss="modal">X</button>
-    </div>
-    <div class="modal-body">
-        <form enctype="multipart/form-data" id="createForm" asp-action="Create" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col form-group">
-                    <label asp-for="Type" class="control-label"></label>
-                    <select asp-for="Type" class="form-control" asp-items="ViewBag.TypeOptions"></select>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label"></label>
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DestructionDate" class="control-label"></label>
-                <input asp-for="DestructionDate" class="form-control" />
-                <span asp-validation-for="DestructionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CaseNo" class="control-label"></label>
-                <input asp-for="CaseNo" class="form-control" />
-                <span asp-validation-for="CaseNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SessionNo" class="control-label"></label>
-                <input asp-for="SessionNo" class="form-control" />
-                <span asp-validation-for="SessionNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                @*<label asp-for="Attachment" class="control-label"></label>*@
-                <input type="file" asp-for="Attachment" />
-                <span asp-validation-for="Attachment" class="text-danger"></span>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button type="submit" class="btn btn-primary btn-lg" data-dismiss="modal" onclick="SubmitForm()">Upload</button>
-    </div>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
