--- a/ArchivesFileManagement_MVC/Views/SpecialCollections/_Create.cshtml
+++ b/ArchivesFileManagement_MVC/Views/SpecialCollections/_Create.cshtml
@@ -11,7 +11,7 @@
         <button type="button" class="close" data-dismiss="modal">X</button>
     </div>
     <div class="modal-body">
-        <form enctype="multipart/form-data" id="createForm" asp-action="Create" method="post">
+        <form enctype="multipart/form-data" id="createForm" asp-action="Create" method="post" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
                 <div class="col form-group">
@@ -39,15 +39,16 @@
                 <input type="file" asp-for="Attachment" required />
                 <span asp-validation-for="Attachment" class="text-danger"></span>
             </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary btn-lg" @*data-dismiss="modal" onclick="SubmitForm(event)"*@ >Upload</button>
+            </div>
         </form>
-    </div>
-    <div class="modal-footer">
-        <button type="submit" class="btn btn-primary btn-lg" data-dismiss="modal" onclick="SubmitForm()">Upload</button>
     </div>
 </div>
 
 <script>
-    function SubmitForm() {
+    function SubmitForm(e) {
+        e.preventDefault();
         var formData = new FormData($("#createForm").get(0));
         $.ajax({
             type: "POST",
@@ -55,9 +56,11 @@
             data: formData,
             contentType: false,
             processData: false,
-            dataType: "json",
+            dataType: "text",
             success: function () {
                 alert("New collection uploaded successfully.");
+                $("#addModalContent").html("");
+                $("#archivesModal").modal("hide");
             },
             error: function () {
                 //alert("There was an error creating the record. Try again.");
